--- a/client-side/package.json
+++ b/client-side/package.json
@@ -13,6 +13,7 @@
     "emoji-picker-react": "^4.11.1",
     "link-preview-js": "^3.0.5",
     "next": "14.2.5",
+    "primereact": "^10.8.2",
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.7.5",
