--- a/client-side/package.json
+++ b/client-side/package.json
@@ -17,6 +17,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.8.2",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0"
